Simplify installation process and improve configuration consistency
- Merge setup_config.sh functionality into install.sh for single-script installation
- Update config.yaml.example to use  from environment variable
- Move all user-specific settings to .env file for consistency
- Update README.md to reflect simplified installation process
- Remove redundant setup_config.sh file
- Improve installation output with better formatting and clearer guidance

This change simplifies the installation process from two scripts to one,
makes configuration more consistent by keeping all user settings in .env,
and ensures documentation accurately reflects the installation flow.

--- a/config/config.yaml.example
+++ b/config/config.yaml.example
@@ -10,8 +10,8 @@ openai:
   
 # Home Assistant Configuration  
 home_assistant:
-  url: "http://homeassistant.local:8123"  # Your HA instance URL
-  token: ${HA_TOKEN}                      # Long-lived access token
+  url: ${HA_URL}                          # Your HA instance URL (from .env)
+  token: ${HA_TOKEN}                      # Long-lived access token (from .env)
   language: "en"                          # Must match OpenAI language
   timeout: 10                             # API timeout in seconds
   
