feat: Replace Conversation API with Model Context Protocol (MCP)
BREAKING CHANGE: This completely replaces the Home Assistant Conversation API
with the new Model Context Protocol (MCP) server integration.

- Requires Home Assistant 2025.2 or later
- MCP server integration must be enabled in HA
- New configuration format required
- No backward compatibility with Conversation API

Major changes:
- New MCPClient with SSE/JSON-RPC support
- Dynamic tool discovery and mapping
- Updated function bridge for MCP
- Removed REST and Conversation API clients
- Updated configuration with MCP settings

This represents a clean break to align with Home Assistant's future direction
for LLM integrations using the Model Context Protocol standard.

--- a/config/config.yaml.example
+++ b/config/config.yaml.example
@@ -15,6 +15,13 @@ home_assistant:
   language: "en"                          # Must match OpenAI language
   timeout: 10                             # API timeout in seconds
   
+  # Model Context Protocol (MCP) configuration
+  mcp:
+    sse_endpoint: "/mcp_server/sse"       # MCP SSE endpoint (default)
+    auth_method: "token"                  # Authentication method: "token" or "oauth"
+    connection_timeout: 30                # Connection timeout in seconds
+    reconnect_attempts: 3                 # Number of reconnection attempts
+  
 # Audio Configuration
 audio:
   input_device: "default"           # Microphone device (name or index)
