feat: Add SSL configuration and diagnostics for MCP client
- Added SSL context creation with verification options
- Added ssl_verify and ssl_ca_bundle config options
- Created SSL diagnostic script (test_mcp_ssl.py)
- Enhanced SSL error handling and logging
- Updated config example with SSL options
- Support for self-signed certificates (with ssl_verify: false)

--- a/config/config.yaml.example
+++ b/config/config.yaml.example
@@ -21,6 +21,8 @@ home_assistant:
     auth_method: "token"                  # Authentication method: "token" or "oauth"
     connection_timeout: 30                # Connection timeout in seconds
     reconnect_attempts: 3                 # Number of reconnection attempts
+    ssl_verify: true                      # Verify SSL certificates (set to false for self-signed certs)
+    ssl_ca_bundle: null                   # Path to custom CA bundle file (optional)
   
 # Audio Configuration
 audio:
