--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,10 @@ asyncio-mqtt>=0.13.0
 # Wake word detection using Picovoice Porcupine
 pvporcupine>=3.0.0
 
+# Web UI dependencies
+aiohttp-jinja2>=1.5.0
+jinja2>=3.1.0
+
 # Development dependencies (install with pip install -r requirements-dev.txt)
 # pytest>=7.0.0
 # pytest-asyncio>=0.21.0
