feat: Add authentication and HTTPS to web UI for security
Security improvements:
- Add Basic Authentication with hashed passwords
- Implement HTTPS with automatic self-signed certificates
- Update installer to prompt for web UI credentials
- Support custom SSL certificates via config
- Add session management with configurable timeout
- Create auth middleware to protect all routes
- Generate 2048-bit RSA certificates automatically
- Use strong TLS 1.2+ cipher suites only

Configuration:
- Change default port to 8443 for HTTPS
- Add auth and tls sections to web_ui config
- Store password as SHA256 hash (never plaintext)
- Enable auth and TLS by default for security

Installation:
- Prompt for username/password during install
- Generate password hash automatically
- Update config.yaml with credentials
- Show HTTPS URL and certificate warning

Documentation:
- Update WEB_UI_GUIDE with security features
- Add security best practices
- Document custom certificate usage
- Update CONFIGURATION.md with new options

--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,9 @@ Thumbs.db
 # Project specific
 config/config.yaml
 config/persona.ini
+config/certs/*.crt
+config/certs/*.key
+config/certs/*.pem
 logs/
 *.log
 debug_audio/
