Update all documentation for v1.1.0 release
- Updated version to 1.1.0 across all docs
- Added comprehensive Web UI documentation
- Enhanced security documentation
- Updated memory bank files with current state
- Added VAD-based conversation improvements
- Documented all v1.1.0 features and fixes

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,6 @@ LOG_LEVEL=INFO
 CONFIG_FILE=config/config.yaml
 PERSONA_FILE=config/persona.ini
 
-# Web UI Authentication (set by installer)
-# To generate manually, use: python tools/generate_password_hash.py
+# Web UI Authentication (set by installer, uses bcrypt)
+# The installer will automatically generate this when you enable web UI security
 WEB_UI_PASSWORD_HASH=
