Fix YAML config corruption bug and temporarily disable preserver
- Fix section boundary detection in YAML preserver for top-level sections
- Add check for section headers (lines ending with ':') at indent 0
- Temporarily disable YAML preserver due to complexity and edge cases
- Add header comments to standard YAML save for documentation
- Add debug logging to help diagnose section extraction issues
- Prevents config file corruption when editing via web UI

--- a/config/config.yaml.example
+++ b/config/config.yaml.example
@@ -4,7 +4,7 @@
 openai:
   api_key: ${OPENAI_API_KEY}        # From environment variable
   voice: "alloy"                    # alloy, ash, ballad, coral, echo, sage, shimmer, verse
-  model: "gpt-4o-realtime-preview"  # OpenAI Realtime model
+  model: "gpt-4o-mini-realtime-preview"  # OpenAI Realtime model
   temperature: 0.8                  # Response creativity (0.0-1.0)
   language: "en"                    # Language code (en, es, fr, de, etc.)
   
