Fix OpenAI 30-minute session timeout issue
- Disconnect OpenAI WebSocket when session ends to prevent timeout
- Reconnect automatically when new session starts
- Add connection validation with retry logic in audio sending
- Handle session_expired errors gracefully

This prevents the 'Your session hit the maximum duration of 30 minutes' error
when the assistant sits idle waiting for wake words.

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,7 @@ reference-documentation/
 *.tmp
 *.temp
 *.bak
+
+# Private brainstorming documents
+mcp-voice-client-brainstorm.md
+openvoice-mcp-initial-tasks.md
